test/testdata/classes/missing_property_error.lox
class Foo {}

var foo = Foo();
print foo.bar; // error: 'Foo' object has no property bar
